Fixed a bug of section display when screen height is too small

--- a/css/main.less
+++ b/css/main.less
@@ -79,7 +79,7 @@ body {
   animation: bg-move 100s infinite;
   .wrapper {
     position: relative;
-    min-height: 100%;
+    min-height: 600px;
     height: 100%;
     background-color: rgba(0,0,0,.9);
     color: white;
@@ -117,7 +117,7 @@ body {
   height: 100%;
   overflow: visible;
   .fma-scrlr-section {
-    min-height: 100%;
+    min-height: 600px;
     height: 100%;
     overflow: hidden;
 
